complete index view and show view

--- a/app/views/new.haml
+++ b/app/views/new.haml
@@ -21,7 +21,7 @@
     %tr 
       %td Robot date hired:
       %td 
-        %input{ :type => "text", :name => "robot[hired]" }
+        %input{ :type => "text", :name => "robot[date_hired]" }
     %tr 
       %td Robot department:
       %td 
