add link to home page

--- a/app/views/dashboard.haml
+++ b/app/views/dashboard.haml
@@ -3,7 +3,7 @@
 %ul
   %li
     %a(href="/robots")
-      ROBOTS
+      Robot List
   %li
     %a(href="/robots/new")
-      NEW ROBOT
+      Activate New Robot
