--- a/app/views/edit.haml
+++ b/app/views/edit.haml
@@ -1,31 +1,44 @@
-%form{ :action => "/robots/#{@robot.id}", :method => "POST" }
-  %p Edit Existing Robot:
-  %table
-    %input{ :type => "hidden", :name => "_method", :value => "PUT"  }
-    %tr 
-      %td Robot name:
-      %td 
+%div{ :class => "well container" }
+  %h1 Edit Existing Robot
+
+  %form{ :class => "form-horizontal",
+         :role => "form",
+         :action => "/robots/#{@robot.id}", 
+         :method => "POST" }
+
+    %div{ :class => "form-group" }
+      %input{ :type => "hidden", :name => "_method", :value => "PUT" }
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } Name:
+      %div{ :class => "col-sm-10" }
         %input{ :type => "text", :name => "robot[name]", :value => @robot.name }
-    %tr 
-      %td Robot city:
-      %td 
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } City:
+      %div{ :class => "col-sm-10" }
         %input{ :type => "text", :name => "robot[city]", :value => @robot.city }
-    %tr 
-      %td Robot state:
-      %td 
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } State:
+      %div{ :class => "col-sm-10" }
         %input{ :type => "text", :name => "robot[state]", :value => @robot.state }
-    %tr 
-      %td Robot birthdate:
-      %td 
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } Birthdate:
+      %div{ :class => "col-sm-10" }
         %input{ :type => "text", :name => "robot[birthdate]", :value => @robot.birthdate }
-    %tr 
-      %td Robot date hired:
-      %td 
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } Date Hired:
+      %div{ :class => "col-sm-10" }
         %input{ :type => "text", :name => "robot[date_hired]", :value => @robot.date_hired }
-    %tr 
-      %td Robot department:
-      %td 
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } Department:
+      %div{ :class => "col-sm-10" }
         %input{ :type => "text", :name => "robot[department]", :value => @robot.department }
-    %tr
-      %td
-        %input{ :type => "submit" }
+
+    %div{ :class => "form-group" }
+      %div{ :class => "col-sm-offset-2 col-sm-10" }
+        %button{ :type => "submit", :class => "btn btn-primary"} Edit Robot
