--- a/app/views/new.haml
+++ b/app/views/new.haml
@@ -1,31 +1,39 @@
-%form{ :action => "/robots", :method => "post" }
-  %p 
-    Enter a new Robot!
-  %table
-    %tr 
-      %td Robot name:
-      %td 
-        %input{ :type => "text", :name => "robot[name]" }
-    %tr 
-      %td Robot city:
-      %td 
-        %input{ :type => "text", :name => "robot[city]" }
-    %tr 
-      %td Robot state:
-      %td 
-        %input{ :type => "text", :name => "robot[state]" }
-    %tr 
-      %td Robot birthdate:
-      %td 
-        %input{ :type => "text", :name => "robot[birthdate]" }
-    %tr 
-      %td Robot date hired:
-      %td 
-        %input{ :type => "text", :name => "robot[date_hired]" }
-    %tr 
-      %td Robot department:
-      %td 
-        %input{ :type => "text", :name => "robot[department]" }
-    %tr
-      %td
-        %input{ :type => "submit" }
+%div{ :class => "well container" }
+
+  %h1 Enter a new Robot!
+
+  %form{ :class => "form-horizontal", :role => "form", :action => "/robots", :method => "post" }
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } Name:
+      %div{ :class => "col-sm-10" }
+        %input{ :type => "text", :name => "robot[name]", :placeholder => "Enter name" }
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } City:
+      %div{ :class => "col-sm-10" }
+        %input{ :type => "text", :name => "robot[city]", :placeholder => "Enter city" }
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } State:
+      %div{ :class => "col-sm-10" }
+        %input{ :type => "text", :name => "robot[state]", :placeholder => "Enter state" }
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } Birthdate:
+      %div{ :class => "col-sm-10" }
+        %input{ :type => "text", :name => "robot[birthdate]", :placeholder => "Enter birthdate" }
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } Date Hired:
+      %div{ :class => "col-sm-10" }
+        %input{ :type => "text", :name => "robot[date_hired]", :placeholder => "Enter date hired" }
+
+    %div{ :class => "form-group" }
+      %label{ :class => "control-label col-sm-2" } Department:
+      %div{ :class => "col-sm-10" }
+        %input{ :type => "text", :name => "robot[department]", :placeholder => "Enter department" }
+
+    %div{ :class => "form-group" }
+      %div{ :class => "col-sm-offset-2 col-sm-10" }
+        %button{ :type => "submit", :class => "btn btn-default"} Activate Robot
